<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.enkhturbadamsaikhan.completesudoku.SinglePlayerActivity"
    android:background="@drawable/background_image">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/logo_small" />

        <TextView
            android:id="@+id/new_puzzle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:typeface="sans"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#000075"
            android:text="@string/tv_new_puzzle"
            android:layout_below="@id/imageView"/>

        <TextView
            android:id="@+id/tv_easy_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:typeface="sans"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginTop="8dp"
            android:text="@string/tv_easy_mode"
            android:layout_below="@id/new_puzzle"/>

        <TextView
            android:id="@+id/tv_medium_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:typeface="sans"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginTop="8dp"
            android:text="@string/tv_medium_mode"
            android:layout_below="@id/tv_easy_mode"/>

        <TextView
            android:id="@+id/tv_hard_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:typeface="sans"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginTop="8dp"
            android:text="@string/tv_hard_mode"
            android:layout_below="@id/tv_medium_mode"/>

        <TextView
            android:id="@+id/tv_extreme_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:typeface="sans"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginTop="8dp"
            android:text="@string/tv_extreme_mode"
            android:layout_below="@id/tv_hard_mode"/>

        <TextView
            android:id="@+id/tv_load_puzzle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:typeface="sans"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textColor="#000075"
            android:text="@string/tv_load_puzzle"
            android:layout_below="@id/tv_extreme_mode"/>

        <TextView
            android:id="@+id/tv_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:typeface="sans"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textColor="#000075"
            android:text="@string/tv_upload_title"
            android:layout_below="@id/tv_load_puzzle"/>

    </RelativeLayout>

</RelativeLayout>
