<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_intro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.enkhturbadamsaikhan.completesudoku.IntroActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_small"
        android:id="@+id/iv_logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_login_intro"
        android:text="@string/b_login"
        android:layout_marginRight="49dp"
        android:layout_marginEnd="49dp"
        android:layout_alignBaseline="@+id/b_register_intro"
        android:layout_alignBottom="@+id/b_register_intro"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_register_intro"
        android:text="@string/b_register"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/iv_logo" />


    <Button
        android:text="@string/b_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_guest"
        android:layout_below="@+id/b_login_intro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp" />

</RelativeLayout>
