<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_saved_games"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.enkhturbadamsaikhan.completesudoku.SavedGamesActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_newSudoku"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/tv_savedGames"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="350dp">

        </ListView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="64dp">

            <Button
                android:text="@string/loadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loadButton"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1" />

            <Button
                android:text="@string/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelButton"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
