<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_upload"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.enkhturbadamsaikhan.completesudoku.UploadActivity"
    android:background="@drawable/background_image">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:layout_height="175dp"
            android:layout_width="wrap_content"
            android:src="@drawable/logo_small"
            android:id="@+id/iv_logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/tv_upload_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_upload"
            android:textColor="#000075"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_below="@+id/iv_logo"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:id="@+id/layout_difficulties"
            android:orientation="vertical"
            android:layout_below="@+id/tv_upload"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp">

            <TextView
                android:text="@string/b_upload_camera"
                android:id="@+id/tv_upload_from_camera"
                android:clickable="true"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:text="@string/b_upload_gallery"
                android:clickable="true"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_upload_from_gallery"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
