<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.enkhturbadamsaikhan.completesudoku.InviteActivity"
    android:background="@drawable/background_image">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/tv_invite_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_invite_friends"
            android:textAlignment="center"
            android:typeface="sans"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#000075" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="350dp">

        </ListView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="64dp">

            <TextView
                android:id="@+id/tv_invite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textAlignment="center"
                android:typeface="sans"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#000075"
                android:text="@string/tv_invite"/>

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textAlignment="center"
                android:typeface="sans"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#000075"
                android:text="@string/tv_cancel"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
